[build-system]
requires = ["setuptools >= 38.3.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "engineer_demo"
version = "0.0.1"
authors = [
  { name="Sebastian Malon", email="Sebastvin@gmail.com" },
]
description = "Engineering work"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Sebastvin/engineer-demo/"
"Bug Tracker" = "https://github.com/Sebastvin/engineer-demo/issues"