[metadata]
name = engineer_demo
version = attr: engineer_demo.__version__
authors = Sebastian Malon
description = Engineering work
readme = "README.md"
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[project.urls]
"Homepage" = "https://github.com/Sebastvin/engineer-demo/"
"Bug Tracker" = "https://github.com/Sebastvin/engineer-demo/issues"


[flake8]
max-line-length = 100


[options]
include_package_data = true
packages = find:
python_requires = >=3.8
setup_requires =
    setuptools >= 38.3.0
install_requires =
    openai
    newspaper3k

