[metadata]
name = summedia
version = attr: summedia.__version__
authors = Sebastian Malon
description = The SumMedia library is a powerful Python tool used for extracting and parsing newspaper articles. It simplifies the process of web scraping, article downloading and working with openai API. The plugin enables various functionalities related to news content personalization and categorization.
readme = "README.md"
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[project.urls]
"Homepage" = "https://github.com/Sebastvin/summedia"
"Bug Tracker" = "https://github.com/Sebastvin/summedia/issues"


[flake8]
max-line-length = 100


[options]
include_package_data = true
packages = find:
python_requires = >=3.9
setup_requires =
    setuptools >= 38.3.0
install_requires =
    openai
    newspaper3k
    pycountry
