[metadata]
name = summedia
version = attr: summedia.__version__
author = Sebastian Malon
author_email = sebastvin@gmail.com
description = SumMedia library is a powerful Python package used for extracting and parsing newspaper articles. It simplifies the process of web scraping, article downloading and working with openai API. The plugin enables various functionalities related to news content personalization and categorization.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/Sebastvin/summedia
project_urls =
    Bug Tracker = https://github.com/Sebastvin/summedia/issues
readme = "README.md"
keywords = python openai text article
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[flake8]
max-line-length = 100
exclude =
    __pycache__
    .venv

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
setup_requires =
    setuptools >= 38.3.0
install_requires =
    openai
    newspaper3k
    pycountry
    requests
    types-requests
